--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
 openai
 sentence-transformers
+torch==2.2.2+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 fuzzywuzzy[speedup]
 python-dotenv
 numpy
