--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
---index-url https://download.pytorch.org/whl/cpu
-torch==2.2.2+cpu
 streamlit
 openai
 sentence-transformers
@@ -9,3 +7,4 @@ numpy
 scikit-learn
 joblib
 SpeechRecognition
+torch==2.2.2+cpu --extra-index-url https://download.pytorch.org/whl/cpu
