--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ numpy<2
 scikit-learn
 joblib
 SpeechRecognition
-streamlit-webrtc
+streamlit-mic-recorder
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.2+cpu
