capture_voice formatted

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,6 @@ numpy<2
 scikit-learn
 joblib
 SpeechRecognition
-streamlit-mic-recorder
-streamlit-webrtc
-webrtcvad
-av
+streamlit-audiorec
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.2+cpu
