--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ numpy<2
 scikit-learn
 joblib
 SpeechRecognition
-streamlit-audiorec
+streamlit-webrtc
+webrtcvad-wheels
+pydub
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.2+cpu
