--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ numpy<2
 scikit-learn
 joblib
 gspread
+pandas
+plotly
 oauth2client
 google-auth-httplib2
 --extra-index-url https://download.pytorch.org/whl/cpu
