--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,7 @@ pandas
 plotly
 oauth2client
 google-auth-httplib2
+spacy>=3.7.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz#egg=en_core_web_sm
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.2+cpu
