--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 streamlit
 openai
-sentence-transformers
+sentence-transformers==2.7.0
+transformers==4.36.2
 fuzzywuzzy[speedup]
 python-dotenv
 numpy<2
-scikit-learn
+scikit-learn==1.4.2
 joblib
 gspread
 pandas
